--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xy1m</groupId>
-    <artifactId>cracking-code-interview-practice</artifactId>
+    <artifactId>cci</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
